--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Converter - Website</title>
-    <base href="https://parthM9.github.io/RateCard-Converter/" />
+    <base href="/RateCard-Converter/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="Converter - Website.styles.css" rel="stylesheet" />
