--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    <script src="/_framework/blazor.webassembly.js"></script>
+    <script src="/RateCard-Converter/_framework/blazor.webassembly.js"></script>
 
 </body>
 
