--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <link href="Converter - Website.styles.css" rel="stylesheet" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
-    <script src="site.js"></script>
+    <script src="/site.js"></script>
 
-    <script src="checkInput.js"></script>
+    <script src="/checkInput.js"></script>
 
-    <script type="module" src="previewModule.js"></script>
+    <script type="module" src="/previewModule.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
